--- a/modes/index.html
+++ b/modes/index.html
@@ -14,13 +14,13 @@
 			<a class="playbtn animate__animated animate__bounceInUp" href="/game">
 				<span>normal mode</span>
 			</a>
-			<a class="playbtn animate__animated animate__bounceInUp" href="/game">
+			<!-- <a class="playbtn animate__animated animate__bounceInUp" href="/game">
 				<span>REVERSE MODE</span>
-			</a>
-			<a class="playbtn animate__animated animate__bounceInUp" href="/game">
+			</a> -->
+			<a class="playbtn animate__animated animate__bounceInUp" href="/doge/">
 				<span>DOGE MODE</span>
 			</a>
-			<a class="playbtn animate__animated animate__bounceInUp" href="/game">
+			<a class="playbtn animate__animated animate__bounceInUp" href="/tetris/">
 				<span>TETRIS MODE</span>
 			</a>
 			<div class="footer">
