--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			</a>
 			<div class="footer">
 				<div class="icon">
-					<a href="https://github.com/Team-Focussed/2048">
+					<a href="https://github.com/Team-Focussed/2048" target="_blank">
 						<i class="fab fa-github"></i>
 					</a>
 				</div>
