--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 				</div>
 			</div>
 
-			<a class="playbtn animate__animated animate__bounceInUp" href="/modes">
+			<a class="playbtn animate__animated animate__bounceInUp" href="modes">
 				<span>play</span>
 			</a>
 			<div class="footer">
 				<div class="icon">
-					<a href="https://github.com/Team-Focussed/2048">
+					<a href="https://github.com/Team-Focussed/2048" target="_blank">
 						<i class="fab fa-github"></i>
 					</a>
 				</div>
