--- a/doge/index.html
+++ b/doge/index.html
@@ -1,30 +1,17 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>DOGE2048</title>
-
-  <link href="style/main.css" rel="stylesheet" type="text/css">
-  <link rel="shortcut icon" href="favicon.png">
-  <link rel="apple-touch-icon" href="meta/apple-touch-icon.png">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-
-  <meta name="HandheldFriendly" content="True">
-  <meta name="MobileOptimized" content="320">
-  <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
-  <meta property="og:title" content="Wow! Such Doge Game!" />
-  <meta property="og:url" content="http://doge2048.com/" />
-  <meta property="og:description" content="much tiles such fun" />
-  <meta property="og:image" content="http://doge2048.com/meta/doge-600.png">
-  <meta property="og:image:type" content="image/png">
-  <meta property="og:image:width" content="600">
-  <meta property="og:image:height" content="600">
+    <meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="style/main.css" rel="stylesheet" type="text/css"> 
+		<title>2048 Game</title>
 </head>
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">DOGE<span style="color:red">2</span><span style="color:#00FF00">0</span><span style="color:blue">4</span><span style="color:#00FFFF">8</span>
-      </h1>
+      <!-- <h1 class="title">DOGE <span style="color:red">2</span><span style="color:#00FF00">0</span><span style="color:blue">4</span><span style="color:#00FFFF">8</span> -->
+      <!-- </h1> -->
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
@@ -92,7 +79,6 @@
 
       </div>
     </div>
-    <p class="game-explanation">Use your arrow keys or swipe to combine similar Doges and score points!</p>
     <div class="info-container">
       <a class="show-info">INFO</a>
     </div>
