--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 			<a class="playbtn animate__animated animate__bounceInUp" href="modes">
 				<span>play</span>
 			</a>
+			<!--  -=-=-=- CHANGES BY AALIYA -=-=-=-  -->
+			<a class="howTo playbtn animate__animated animate__bounceInUp" href="/instructions">
+				<span>?</span>
+			</a>
 			<div class="footer">
 				<div class="icon">
 					<a href="https://github.com/Team-Focussed/2048" target="_blank">
