--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<span>play</span>
 			</a>
 			<!--  -=-=-=- CHANGES BY AALIYA -=-=-=-  -->
-			<a class="howTo playbtn animate__animated animate__bounceInUp" href="/instructions">
+			<a class="howTo playbtn animate__animated animate__bounceInUp" href="instructions">
 				<span>?</span>
 			</a>
 			<div class="footer">
