--- a/instructions/index.html
+++ b/instructions/index.html
@@ -24,7 +24,7 @@
 				them, they will merge into one tile with the sum of the numbers written on them initially.<br /><br /><br />
 				<b>Fun Fact:</b> The highest possible value in 2048 is 131072.
 			</div>
-			<a class="howTo playbtn animate__animated animate__bounceInUp" href="/">
+			<a class="howTo playbtn animate__animated animate__bounceInUp" href="../">
 				<span class="fa fa-arrow-left"></span>
 			</a>
 
