Revert "Added instruction page"
This reverts commit e21a3d21585845a2c4e370ef1e7419644889859a, reversing
changes made to 456ca6b3e1c186f12a13e8ab5064854689d70614.

--- a/doge/index.html
+++ b/doge/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Focussed 2048</title>
+  <title>DOGE2048</title>
 
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.png">
@@ -23,8 +23,8 @@
 <body>
   <div class="container">
     <div class="heading">
-      <!-- <h1 class="title">DOGE <span style="color:red">2</span><span style="color:#00FF00">0</span><span style="color:blue">4</span><span style="color:#00FFFF">8</span> -->
-      <!-- </h1> -->
+      <h1 class="title">DOGE<span style="color:red">2</span><span style="color:#00FF00">0</span><span style="color:blue">4</span><span style="color:#00FFFF">8</span>
+      </h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
@@ -92,6 +92,7 @@
 
       </div>
     </div>
+    <p class="game-explanation">Use your arrow keys or swipe to combine similar Doges and score points!</p>
     <div class="info-container">
       <a class="show-info">INFO</a>
     </div>
