--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 		<div class="footer">
 			<div class="icon">
-				<a href="https://github.com/Team-Focussed/2048" target="_blank">
+				<a href="https://github.com/Team-Focussed/2048">
 					<i class="fab fa-github"></i>
 				</a>
 			</div>
