--- a/modes/index.html
+++ b/modes/index.html
@@ -11,16 +11,16 @@
 	</head>
 	<body>
 		<div class="landing modes">
-			<a class="playbtn animate__animated animate__bounceInUp" href="../game">
+			<a class="playbtn animate__animated animate__bounceInUp" href="/game">
 				<span>normal mode</span>
 			</a>
 			<!-- <a class="playbtn animate__animated animate__bounceInUp" href="/game">
 				<span>REVERSE MODE</span>
 			</a> -->
-			<a class="playbtn animate__animated animate__bounceInUp" href="../doge">
+			<a class="playbtn animate__animated animate__bounceInUp" href="/doge/">
 				<span>DOGE MODE</span>
 			</a>
-			<a class="playbtn animate__animated animate__bounceInUp" href="../tetris">
+			<a class="playbtn animate__animated animate__bounceInUp" href="/tetris/">
 				<span>TETRIS MODE</span>
 			</a>
 			<div class="footer">
